Sat Jul  7 14:40:31 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the silc_server_remove_clients_by_server's channel
	  key re-generation.  The hash table handling was incorrect
	  and would not work with many channels.  Affected file is
	  silcd/server.c.

	* Fixed some memory leaks around the server code.

	* Rewrote the silc_server_get_users_on_channel to support IPv6
	  based Client ID's.  Affected file silcd/server.c.

	* Defined the SILC_MESSAGE_FLAG_SIGNED to the protocol
	  specification.  However, a separate document must be written
	  to define the detailed signing procedure and the payload
	  associated with the flag.  Defined the flag to the
	  lib/silccore/silcchannel.h as well.

Fri Jul  6 18:26:31 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Changed the dynamic tables to static size tables in the
	  lib/silccrypt/silchmac.c.

	* Removed GCC dependencies from the code.  A patch by cras.

Fri Jul  6 09:39:35 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Do not show the error "Error receiving packet bla bla"
	  in server if it really was not an error (-2 means that reading
	  is pending).  Affected file silcd/server.c.

Thu Jul  5 21:22:32 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a possible crash in silc_server_remove_clients_by_server
	  in silcd/server.c.  Fixed there also some memory leaks.

	* Fixed the silc_idlist_replace_client_id.  It could replace
	  wrong key in the hash table.  Affected file silcd/idlist.c.

	* Do not check whether there are global users on the channel
	  if the channel->global_users is FALSE.  Affected functions
	  silc_server_remove_from_one_channel and
	  silc_server_remove_from_channels in silcd/server.c.  Also,
	  do not check if the removed client is local as we can be
	  sure that global client was not removed from the channel
	  and checking for global users is not needed.

	* The silc_server_remove_clients_by_server now re-generates