@@ -1,3 +1,11 @@
+Sun Jul  8 00:18:15 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Defined SILC Mutex API and SILC Thread API and implemented
+	  them for Unix.  Affected files are
+	  lib/silcutil/silcmutex.h, lib/silcutil/silcthread.h,
+	  lib/silcutil/unix/silcunixmutex.c and
+	  lib/silcutil/unix/silcunixthread.c.
+
 Sat Jul  7 14:40:31 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed the silc_server_remove_clients_by_server's channel
